# ha-sinapsi-alfa

./: .devcontainer.json  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pymarkdownlint.json  .repo-sync.yaml  .ruff.toml  CHANGELOG.md  CLAUDE.md  Dockerfile.dev  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: mind.mv2  mind.mv2.backup-1769354895923  settings.local.json
.github/: FUNDING.yml  dependabot.yml  release-notes-template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml
.github/workflows/: dbautomerge.yml  lint.yml  release.yml  test.yml  validate.yml
config/: configuration.yaml
custom_components/sinapsi_alfa/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  device_trigger.py  diagnostics.py  helpers.py  icons.json  manifest.json  modbuspayload.py  quality_scale.yaml  repairs.py  sensor.py
custom_components/sinapsi_alfa/translations/: de.json  en.json  es.json  et.json  fi.json  fr.json  it.json  nb.json  pt.json  sv.json
doc/: alfa-ha-modbus-configuration (original).yaml  alfa-ha-modbus-configuration.yaml
docs/analysis/: energy-oscillation-fix.md  modbuslink-migration-analysis.md
docs/releases/: README.md  v0.4.2.md  v0.5.0-beta.1.md  v0.5.0.md  v1.0.0-beta.1.md  v1.0.0-beta.2.md  v1.0.0-beta.3.md  v1.0.0-beta.4.md  v1.0.0.md  v1.0.1.md  v1.1.0.md  v1.1.1.md  v1.1.10.md  v1.1.11-beta.1.md  v1.1.11-beta.2.md  v1.1.11.md  v1.1.12-beta.1.md  v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.1.5.md  v1.1.6.md  v1.1.7.md  v1.1.8.md  v1.1.9.md  v1.13.0.md  v1.13.1.md  v1.13.10.md  v1.13.2.md  v1.13.3.md  v1.13.4.md  v1.13.5.md  v1.13.6.md  v1.13.7.md  v1.13.8.md  v1.13.9.md  v1.2.0.md  v1.2.1.md  v1.2.10.md  v1.2.11.md  (+17 more)
docs/sunspec-maps/: Alfa Modbus Register Map.xlsx  alfa-ha-modbus-configuration (original).yaml  alfa-ha-modbus-configuration.yaml  distacco.yaml
scripts/: setup
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_device_trigger.py  test_diagnostics.py  test_helpers.py  test_init.py  test_repairs.py  test_sensor.py
