[project]
name = "ha-sinapsi-alfa"
version = "1.1.12"
description = "Home Assistant custom integration for Sinapsi Alfa energy monitoring devices using Modbus TCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "alexdelprete" }]
keywords = ["home-assistant", "sinapsi", "alfa", "modbus", "energy", "monitoring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Homepage" = "https://github.com/alexdelprete/ha-sinapsi-alfa"
"Bug Tracker" = "https://github.com/alexdelprete/ha-sinapsi-alfa/issues"

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
dev = [
    "colorlog>=6.10.0",
    "homeassistant>=2025.10.0",
    "homeassistant-stubs",
    "mdformat",
    "mdformat-gfm",
    "mypy",
    "pre-commit",
    "pymarkdownlnt",
    "pymodbus>=3.11.2",
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-timeout",
]

[dependency-groups]
lint = [
    "homeassistant-stubs",
    "mdformat",
    "mdformat-gfm",
    "mypy",
    "pre-commit",
    "pymarkdownlnt",
    "ruff>=0.8.0",
]
pytest = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-timeout",
]
dev = [
    "colorlog>=6.10.0",
    "homeassistant>=2025.10.0",
    "pymodbus>=3.11.2",
    { include-group = "lint" },
    { include-group = "pytest" },
]

[tool.codespell]
skip = "*.json"
quiet-level = 3
ignore-words-list = "hass"

[tool.pytest.ini_options]
addopts = """
  --timeout=20
  --cov=custom_components.sinapsi_alfa
  --cov-report=term-missing
"""
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["custom_components.sinapsi_alfa"]
relative_files = true

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.13"
platform = "linux"
show_error_codes = true
follow_imports = "silent"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = [
    "ignore-without-code",
    "redundant-self",
    "truthy-iterable",
]
disable_error_code = ["annotation-unchecked"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
warn_return_any = false
warn_unreachable = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_unused_ignores = false

[tool.ruff]
line-length = 100
indent-width = 4
fix = true
target-version = "py313"
required-version = ">=0.8.0"

# Exclude non-code directories from formatting and linting
extend-exclude = [
    ".vscode",
    ".devcontainer",
    ".github",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A001",     # Variable {name} is shadowing a Python builtin
    "ASYNC",    # flake8-async
    "B002",     # Python does not support the unary prefix increment
    "B005",     # Using .strip() with multi-character strings is misleading
    "B007",     # Loop control variable {name} not used within loop body
    "B009",     # Do not call getattr with a constant attribute value
    "B014",     # Exception handler with duplicate exception
    "B015",     # Pointless comparison
    "B017",     # pytest.raises(BaseException) should be considered evil
    "B018",     # Found useless attribute access
    "B023",     # Function definition does not bind loop variable {name}
    "B024",     # Abstract base class with no abstract methods
    "B026",     # Star-arg unpacking after a keyword argument is discouraged
    "B032",     # Possible unintentional type annotation
    "B035",     # Dictionary comprehension uses static key
    "B904",     # Use raise from to specify exception cause
    "B905",     # zip() without an explicit strict= parameter
    "BLE",      # flake8-blind-except
    "C",        # complexity
    "COM818",   # Trailing comma on bare tuple prohibited
    "D",        # pydocstyle
    "DTZ003",   # Use datetime.now(tz=) instead of datetime.utcnow()
    "DTZ004",   # Use datetime.fromtimestamp(ts, tz=) instead
    "E",        # pycodestyle errors
    "F",        # pyflakes
    "F541",     # f-string without any placeholders
    "FLY",      # flynt
    "FURB",     # refurb
    "G",        # flake8-logging-format
    "I",        # isort
    "ICN001",   # import conventions
    "INP",      # flake8-no-pep420
    "ISC",      # flake8-implicit-str-concat
    "LOG",      # flake8-logging
    "N804",     # First argument of a class method should be named cls
    "N805",     # First argument of a method should be named self
    "N815",     # Variable in class scope should not be mixedCase
    "PERF",     # perflint
    "PGH",      # pygrep-hooks
    "PIE",      # flake8-pie
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "PTH",      # flake8-pathlib
    "PYI",      # flake8-pyi
    "RET",      # flake8-return
    "RSE",      # flake8-raise
    "RUF005",   # Consider iterable unpacking instead of concatenation
    "RUF006",   # Store a reference to asyncio.create_task return value
    "RUF007",   # Prefer itertools.pairwise() over zip()
    "RUF008",   # Do not use mutable default values for dataclass attributes
    "RUF010",   # Use explicit conversion flag
    "RUF013",   # PEP 484 prohibits implicit Optional
    "RUF016",   # Slice in indexed access uses wrong type
    "RUF017",   # Avoid quadratic list summation
    "RUF018",   # Avoid assignment expressions in assert statements
    "RUF019",   # Unnecessary key check before dictionary access
    "RUF020",   # {never_like} | T is equivalent to T
    "RUF021",   # Parenthesize a and b expressions when chaining
    "RUF022",   # Sort __all__
    "RUF023",   # Sort __slots__
    "RUF024",   # Do not pass mutable objects to dict.fromkeys
    "RUF026",   # default_factory is a positional-only argument
    "RUF030",   # print() call in assert statement
    "RUF032",   # Decimal() called with float literal argument
    "RUF033",   # __post_init__ method with argument defaults
    "RUF034",   # Useless if-else condition
    "RUF100",   # Unused noqa directive
    "RUF101",   # noqa directives that use redirected rule codes
    "RUF200",   # Failed to parse pyproject.toml
    "S102",     # Use of exec detected
    "S103",     # bad-file-permissions
    "S108",     # hardcoded-temp-file
    "S306",     # suspicious-mktemp-usage
    "S307",     # suspicious-eval-usage
    "S313",     # suspicious-xmlc-element-tree-usage
    "S314",     # suspicious-xml-element-tree-usage
    "S315",     # suspicious-xml-expat-reader-usage
    "S316",     # suspicious-xml-expat-builder-usage
    "S317",     # suspicious-xml-sax-usage
    "S318",     # suspicious-xml-mini-dom-usage
    "S319",     # suspicious-xml-pull-dom-usage
    "S601",     # paramiko-call
    "S602",     # subprocess-popen-with-shell-equals-true
    "S604",     # call-with-shell-equals-true
    "S608",     # hardcoded-sql-expression
    "S609",     # unix-command-wildcard-injection
    "SIM",      # flake8-simplify
    "SLF",      # flake8-self
    "SLOT",     # flake8-slots
    "T100",     # Trace found: {name} used
    "T20",      # flake8-print
    "TC",       # flake8-type-checking
    "TID",      # flake8-tidy-imports
    "TRY",      # tryceratops
    "UP",       # pyupgrade
    "UP031",    # Use format specifiers instead of percent format
    "UP032",    # Use f-string instead of format call
    "W",        # pycodestyle warnings
]

ignore = [
    "ASYNC109", # Async function with timeout parameter
    "ASYNC110", # Use asyncio.Event instead of awaiting asyncio.sleep in while loop
    "D202",     # No blank lines allowed after function docstring
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "D406",     # Section name should end with a newline
    "D407",     # Section name underlining
    "E501",     # line too long

    "PLC1901",  # compare-to-empty-string
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments to function call
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison
    "PLW1641",  # __eq__ without __hash__
    "PLW2901",  # Outer variable overwritten by inner target
    "PT011",    # pytest.raises is too broad
    "PT018",    # Assertion should be broken down into multiple parts
    "RUF001",   # String contains ambiguous unicode
    "RUF002",   # Docstring contains ambiguous unicode
    "RUF003",   # Comment contains ambiguous unicode
    "RUF015",   # Prefer next(...) over single element slice
    "SIM102",   # Use a single if statement instead of nested
    "SIM103",   # Return the condition directly
    "SIM108",   # Use ternary operator
    "SIM115",   # Use context handler for opening files

    # Moving imports into type-checking blocks can mess with pytest.patch()
    "TC001",    # Move application import into a type-checking block
    "TC002",    # Move third-party import into a type-checking block
    "TC003",    # Move standard library import into a type-checking block
    # Quotes for typing.cast generally not necessary
    "TC006",    # Add quotes to type expression in typing.cast()

    "TRY003",   # Avoid specifying long messages outside the exception class
    "TRY400",   # Use logging.exception instead of logging.error
    # Ignored due to performance
    "UP046",    # Non PEP 695 generic class
    "UP047",    # Non PEP 696 generic function
    "UP049",    # Avoid private type parameter names

    # May conflict with the formatter
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",

    # Disabled because ruff does not understand type of __all__ generated by a function
    "PLE0605",
]

[tool.ruff.lint.per-file-ignores]
# Allow missing __init__.py in tests
"tests/*.py" = ["INP001"]
"tests/*" = [
    "D",        # Docstring rules
    "S101",     # Use of assert detected
    "SLF001",   # Private member accessed
    "PLR2004",  # Magic value used in comparison
    "PLR0913",  # Too many arguments
    "C901",     # Function is too complex
    "B017",     # Don't assert blind Exception
    "PT006",    # Wrong type passed to first argument
    "S108",     # Probable insecure usage of temporary file
]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
voluptuous = "vol"
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
"homeassistant.util.dt" = "dt_util"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mdformat]
wrap = 120
number = true

[tool.pymarkdown]
plugins.md013.enabled = true
plugins.md013.line_length = 120
plugins.md024.enabled = true
plugins.md024.siblings_only = true
plugins.md033.enabled = true
plugins.md036.enabled = false
plugins.md040.enabled = true
plugins.md041.enabled = true
plugins.md050.enabled = true
plugins.md050.strong_style = "asterisk"
