[project]
name = "ha-sinapsi-alfa"
version = "1.1.12"
description = "Home Assistant custom integration for Sinapsi Alfa energy monitoring devices using Modbus TCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "alexdelprete" }]
keywords = ["home-assistant", "sinapsi", "alfa", "modbus", "energy", "monitoring"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
"Homepage" = "https://github.com/alexdelprete/ha-sinapsi-alfa"
"Bug Tracker" = "https://github.com/alexdelprete/ha-sinapsi-alfa/issues"

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
dev = [
    "colorlog>=6.10.0",
    "getmac>=0.9.5",
    "homeassistant>=2025.10.0",
    "homeassistant-stubs",
    "mdformat",
    "mdformat-gfm",
    "modbuslink~=1.5.0",
    "pre-commit",
    "pymarkdownlnt",
    "ruff>=0.8.0",
    "ty",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-timeout",
]

[dependency-groups]
lint = [
    "homeassistant-stubs",
    "mdformat",
    "mdformat-gfm",
    "pre-commit",
    "pymarkdownlnt",
    "ruff>=0.8.0",
    "ty",
]
pytest = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-timeout",
]
dev = [
    "colorlog>=6.10.0",
    "getmac>=0.9.5",
    "homeassistant>=2025.10.0",
    "modbuslink~=1.5.0",
    { include-group = "lint" },
    { include-group = "pytest" },
]

# <!-- BEGIN SHARED:repo-sync -->
# Synced by repo-sync on 2026-02-11


[tool.codespell]
skip = "*.json"
quiet-level = 3
ignore-words-list = "hass"

[tool.pytest.ini_options]
addopts = """
  --timeout=20
  --cov=custom_components.sinapsi_alfa
  --cov-report=term-missing
"""
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["custom_components.sinapsi_alfa"]
relative_files = true

[tool.coverage.report]
show_missing = true

# ty type checker configuration (Rust-based, faster than mypy)
[tool.ty.environment]
python-version = "3.13"
python-platform = "linux"

[tool.ty.rules]
# Promote warnings to errors for strictness
deprecated = "error"
redundant-cast = "error"

[tool.ruff]
line-length = 100
indent-width = 4
fix = true
target-version = "py313"
required-version = ">=0.8.0"

# Exclude non-code directories from formatting and linting
extend-exclude = [
    ".vscode",
    ".devcontainer",
    ".github",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A001",     # Variable {name} is shadowing a Python builtin
    "ASYNC",    # flake8-async
    "B",        # flake8-bugbear
    "BLE",      # flake8-blind-except
    "C",        # complexity
    "COM818",   # Trailing comma on bare tuple prohibited
    "D",        # pydocstyle
    "DTZ",      # flake8-datetimez
    "E",        # pycodestyle errors
    "F",        # pyflakes
    "FLY",      # flynt
    "FURB",     # refurb
    "G",        # flake8-logging-format
    "I",        # isort
    "ICN001",   # import conventions
    "INP",      # flake8-no-pep420
    "ISC",      # flake8-implicit-str-concat
    "LOG",      # flake8-logging
    "N",        # pep8-naming
    "PERF",     # perflint
    "PGH",      # pygrep-hooks
    "PIE",      # flake8-pie
    "PL",       # pylint
    "PT",       # flake8-pytest-style
    "PTH",      # flake8-pathlib
    "PYI",      # flake8-pyi
    "RET",      # flake8-return
    "RSE",      # flake8-raise
    "RUF",      # ruff-specific rules
    "S",        # flake8-bandit (security)
    "SIM",      # flake8-simplify
    "SLF",      # flake8-self
    "SLOT",     # flake8-slots
    "T10",      # flake8-debugger
    "T20",      # flake8-print
    "TC",       # flake8-type-checking
    "TID",      # flake8-tidy-imports
    "TRY",      # tryceratops
    "UP",       # pyupgrade
    "W",        # pycodestyle warnings
]

ignore = [
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D107",     # Missing docstring in __init__
    "D202",     # No blank lines allowed after function docstring
    "D203",     # 1 blank line required before class docstring
    "D213",     # Multi-line docstring summary should start at the second line
    "D406",     # Section name should end with a newline
    "D407",     # Section name underlining
    "E501",     # line too long

    "PLC1901",  # compare-to-empty-string
    "PLR0904",  # Too many public methods
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0914",  # Too many local variables
    "PLR0915",  # Too many statements
    "PLR0916",  # Too many Boolean expressions
    "PLR0917",  # Too many positional arguments
    "PLR1702",  # Too many nested blocks
    "PLR2004",  # Magic value used in comparison
    "PLW2901",  # Outer variable overwritten by inner target

    "PT011",    # pytest.raises is too broad
    "PT018",    # Assertion should be broken down

    "RUF001",   # String contains ambiguous unicode
    "RUF002",   # Docstring contains ambiguous unicode
    "RUF003",   # Comment contains ambiguous unicode
    "RUF015",   # Prefer next(...) over single element slice

    "SIM102",   # Use a single if statement instead of nested
    "SIM103",   # Return the condition directly
    "SIM108",   # Use ternary operator
    "SIM115",   # Use context handler for opening files

    # Moving imports into type-checking blocks can mess with pytest.patch()
    "TC001",    # Move application import into a type-checking block
    "TC002",    # Move third-party import into a type-checking block
    "TC003",    # Move standard library import into a type-checking block

    "TRY003",   # Avoid specifying long messages outside the exception class
    "TRY400",   # Use logging.exception instead of logging.error
    "PGH003",   # Use specific rule codes when ignoring type issues

    # May conflict with the formatter
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",

    # Disabled because ruff does not understand type of __all__ generated by a function
    "PLE0605",
    "ASYNC109",
    "ASYNC110",
    "PLW1641",
    "TC006",
    "UP046",
    "UP047",
    "UP049",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "INP001",
]
"tests/*" = [
    "D",        # Docstring rules
    "S101",     # Use of assert detected
    "SLF001",   # Private member accessed
    "PLR2004",  # Magic value used in comparison
    "PLR0913",  # Too many arguments
    "C901",     # Function is too complex
    "B017",     # Don't assert blind Exception
    "PT006",    # Wrong type passed to first argument
    "S108",     # Probable insecure usage of temporary file
]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
voluptuous = "vol"
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
"homeassistant.util.dt" = "dt_util"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mdformat]
wrap = 120
number = true

[tool.pymarkdown]
plugins.md013.enabled = true
plugins.md013.line_length = 180
plugins.md013.code_block_line_length = 180
plugins.md013.tables = false
plugins.md013.headings = false
plugins.md024.enabled = true
plugins.md024.siblings_only = true
plugins.md033.enabled = true
plugins.md036.enabled = false
plugins.md040.enabled = true
plugins.md041.enabled = true
plugins.md050.enabled = true
plugins.md050.strong_style = "asterisk"

# <!-- END SHARED:repo-sync -->
